# medical-forms

./: AGENTS.md  CITATION.cff  CLAUDE.md  Makefile  forms.csv  forms.tsv  index.md  plan.md  tasks.md
.claude/: settings.local.json
AGENTS/: cargo-loco-generate-scaffold.md  fhir-api.md  fhir-r5.md  front-end-with-sveltekit-tailwind-svar.md  (+3 more)
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/: AGENTS.md  Cargo.toml  index.md  plan.md  tasks.md
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/assets/static/css/: style.css
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/config/: development.yaml  test.yaml
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/src/controllers/: assessment.rs  dashboard.rs
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/src/engine/: flagged_issues.rs  mod.rs  severity_grader.rs  severity_rules.rs  types.rs  utils.rs
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/src/views/: assessment.rs  dashboard.rs
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/templates/: base.html.tera  dashboard.html.tera  landing.html.tera  report.html.tera
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/templates/assessment/: step01.html.tera  step02.html.tera  step03.html.tera  step04.html.tera  step05.html.tera  step06.html.tera  step07.html.tera  step08.html.tera  step09.html.tera  step10.html.tera
forms/allergy-assessment/full-stack-with-rust-axum-loco-tera-htmx-alpine/tests/engine/: flagged_issues_test.rs  severity_grader_test.rs
forms/pre-operative-assessment-by-clinician/full-stack-with-rust-axum-loco-tera-htmx-alpine/todo/: Cargo.toml  index.md  tasks.md
forms/pre-operative-assessment-by-clinician/full-stack-with-rust-axum-loco-tera-htmx-alpine/todo/src/: main.rs
forms/pre-operative-assessment-by-clinician/full-stack-with-rust-axum-loco-tera-htmx-alpine/todo/templates/: assessment.html.tera  report.html.tera
(+11986 files in other folders)
