[package]
name = "pre-operative-assessment-by-clinician-tera-crate"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal", "net"] }
tera = { version = "1.20" }
tower = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_urlencoded = "0.7"
